manifests/0000_70_dns-operator_01-network-policy.yaml
# We control the namespace, deny anything we do not explicitly allow
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-operator-deny-all
  namespace: openshift-dns-operator
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
### Allow the operators to talk to the apiserver and coredns healthcheck
### endpoints.
### Allow access to the metrics ports on the operators.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-operator-allow
  namespace: openshift-dns-operator
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector:
    matchLabels:
      name: dns-operator
  policyTypes:
  - Egress
  - Ingress
  egress:
  ### Host port 6443 needs to be available for API server access. We don't know
  ### the host IP ahead of time, so we can't narrow down the target.
  - ports:
    - protocol: TCP
      port: 6443
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-monitoring
    ports:
    - protocol: TCP
      port: 9393
